<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add an item</string>
    <string name="add_item_error">Could not add this item</string>
    <string name="add_photo">Add a photo</string>
    <string name="app_name">Marketplace</string>
    <string name="apply">Apply</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm password</string>
    <string name="connection_error">Could not connect to the server. Check your network connection and try again later.</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="default_option">(default)</string>
    <string name="description">Description</string>
    <string name="display_options">Display options</string>
    <string name="email">Email</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_count">Feedback: %1$d</string>
    <string name="feedback_error_add">Feedback could not be added</string>
    <string name="feedback_error_rate">Rate the seller from 1 to 5 before publishing</string>
    <string name="feedback_error_remove">Feedback could not be removed</string>
    <string name="found_count">Found: %1$d</string>
    <string name="found_count_of">Found: %1$d/%2$d</string>
    <string name="free">Free</string>
    <string name="item">Item</string>
    <string name="item_image">Item image</string>
    <string name="items">Items</string>
    <string name="location">Location</string>
    <string name="login">Sign in</string>
    <string name="login_error">Invalid email or password</string>
    <string name="logout">Sign out</string>
    <string name="max">Max</string>
    <string name="max_images_error">The maximum number of images is %1$d</string>
    <string name="min">Min</string>
    <string name="my_items">My items</string>
    <string name="name">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="not_selected">(not selected)</string>
    <string name="password">Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="permission_error">Could not get the required permission</string>
    <string name="phone_number">Phone number</string>
    <string name="photo">Photo</string>
    <string name="price">Price</string>
    <string name="price_range">Price cannot be less than 0 or too big</string>
    <string name="publish">Publish</string>
    <string name="query">Query</string>
    <string name="region">Region</string>
    <string name="register">Sign up</string>
    <string name="registration_error">Could not create a new user. Try another email or password.</string>
    <string name="remove">Remove</string>
    <string name="remove_item_message">Are you sure you want to remove this item?</string>
    <string name="remove_item_title">Remove item</string>
    <string name="sort">Sort</string>
    <string name="sort_cheapest">Cheapest</string>
    <string name="sort_most_expensive">Most expensive</string>
    <string name="sort_newest">Newest</string>
    <string name="title">Title</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="today">Today</string>
    <string name="yes">Yes</string>
    <string name="yesterday">Yesterday</string>
    <string name="user_image">User image</string>
</resources>
