<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    app:contentPadding="8dp"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="3"
        app:rowCount="7">

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_rowSpan="5"
            app:cardElevation="0dp"
            app:cardCornerRadius="62.5dp"
            app:cardBackgroundColor="@color/light_gray">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_image"
                android:src="@drawable/ic_person" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/name"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            tools:text="Name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/phone_number"
            android:src="@drawable/ic_phone" />

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            tools:text="Phone number" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/userLocation"
            android:layout_width="0dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:text="Location" />

        <TextView
            android:id="@+id/userFeedbackCount"
            android:layout_width="0dp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            tools:text="@string/feedback_count" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1">

            <TextView
                android:id="@+id/userFeedbackAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="0.0" />

            <include
                android:id="@+id/userFeedbackRate"
                layout="@layout/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/userFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1" />

        <Button
            android:id="@+id/userItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.cardview.widget.CardView>
