<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.fragments.ItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/itemImageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:sliderAnimationDuration="400"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="false"
                app:sliderIndicatorAnimationDuration="400"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/dark_gray"
                app:sliderIndicatorUnselectedColor="@color/light_gray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="false" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemImageCardView">

                <TextView
                    android:id="@+id/itemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/itemDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Date" />

                    <TextView
                        android:id="@+id/itemPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Price" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/itemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:text="Description" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnCount="3"
                app:rowCount="3">

                <ImageView
                    android:id="@+id/itemUserImage"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:contentDescription="@string/user_image"
                    android:src="@drawable/ic_person"
                    app:layout_rowSpan="3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/name"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:id="@+id/itemUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="1"
                    tools:text="Name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone_number"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/itemUserPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_columnWeight="1"
                    tools:text="Phone number" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/itemUserLocation"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    tools:text="Location" />
            </androidx.gridlayout.widget.GridLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
